Force vmargs for tests