@@ -11,7 +11,9 @@
 
 	<artifactId>com.dubture.indexing.test</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
-
+	<properties>
+		<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -27,5 +29,17 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<argLine>${test.vmargs}</argLine>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
